--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -3,9 +3,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yara Naafs</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="main">
+            <div id="home" class="header-wrapper">
+                <div class="main-logo"><img src="images/logo.jpg" alt="logo"></div>
+                <nav>
+                  <ul class="main-menu">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#footer">Contact</a></li>
+                  </ul>
+                </nav>
+            </div>
+            <div class="home flex">
+                <div>
+                    <h2>Hi i'm Yara Naafs</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
+                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+                </div>
+                <div>
+                    <img src="images/logo.jpg" alt="logo">
+                </div>
+            </div>
+            <div id="about" class="about">
+                <h2>About me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
+                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+            </div>
+            <div id="skills" class="skills">
+                <h2>My skills</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
+                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+            </div>
+            <div id="projects" class="projects">
+                <h2>previous projects</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
+                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+            </div>
+            <div>
+                <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                    <defs>
+                        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                    </defs>
+                    <g class="parallax">
+                        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                    </g>
+                </svg>
+            </div>
+            <div id="footer" class="footer flex">
+                <p>some text</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
