--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="main">
             <div id="home" class="header-wrapper">
-                <div class="main-logo"><img src="images/logo.jpg" alt="logo"></div>
+                <!-- <div class="main-logo"><img src="images/logo.jpg" alt="logo"></div> -->
                 <nav>
                   <ul class="main-menu">
                     <li><a href="#home">Home</a></li>
@@ -22,30 +22,36 @@
                   </ul>
                 </nav>
             </div>
-            <div class="home flex">
+            <div id="about" class="home flex">
                 <div>
                     <h2>Hi i'm Yara Naafs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
-                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+                    <p>I am a 19 year old self-taught developer, I started coding around 14 years old. <br>i also recently got a 3d-printer and have been learning to 3d-model and print.</p>
+                    <h2>My skills</h2>
+                    <p>I started my coding journey by learning python i made some discord bots using python and tried a desktop app, <br>currently i am learning web development and this is my first website.</p>
                 </div>
                 <div>
                     <img src="images/logo.jpg" alt="logo">
                 </div>
             </div>
-            <div id="about" class="about">
-                <h2>About me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
-                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
-            </div>
-            <div id="skills" class="skills">
-                <h2>My skills</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
-                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
-            </div>
+            <hr>
             <div id="projects" class="projects">
-                <h2>previous projects</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio autem rem expedita porro iste, 
-                    accusantium ipsam nulla delectus repudiandae illo aliquid, omnis cumque? Ipsa magni enim eaque facere voluptatem!</p>
+                <h2>Previous projects</h2>
+                <div class="timeline">
+                    <div class="tm-container left">
+                      <div class="tm-content">
+                        <h5>Personal website</h5>
+                        <p>This website is my first ever public website where i can showcase my skills and projects.</p>
+                        <p class="date">11-16-2022</p>
+                      </div>
+                    </div>
+                    <div class="tm-container right">
+                      <div class="tm-content">
+                        <h5>Undertale RPG</h5>
+                        <p>Undertale RPG is a discord bot that lets you play the undertale game in discord. It has a full fight system that lets users attack monsters to earn rewards that they can use to buy new items.</p>
+                        <p class="date">06-19-2022</p>
+                      </div>
+                    </div>
+                </div>
             </div>
             <div>
                 <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -61,8 +67,21 @@
                     </g>
                 </svg>
             </div>
-            <div id="footer" class="footer flex">
-                <p>some text</p>
+            <div id="footer" class="footer-bg">
+                <div class="footer flex">
+                    <div>
+                        <img src="images/logo.jpg" alt="logo">
+                    </div>
+                    <div>
+                        <a href="https://github.com/yakirarage" target="_blank" class="button">Github</a>
+                        <br>
+                        <a href="https://www.linkedin.com/in/yara-naafs-3184b6257/" target="_blank" class="button">Linkedin</a>
+                        <br>
+                        <a href="https://discord.com/users/536538183555481601" target="_blank" class="button">Discord</a>
+                        <br>
+                        <a href="https://www.instagram.com/yara_naafs/" target="_blank" class="button">Instagram</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
