--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,9 @@
   --h3-font: 'Kaushan Script', cursive;
   --bg-color-purple: rgba(84,58,183,1);
   --bg-color-blue: rgba(0,172,193,1);
+  --bg-color-white: white;
   --text-main-white: white;
+  --text-main-black: black;
   --accent-color: #77C159;
 }
 
@@ -15,6 +17,14 @@ body {
   font-family: var(--h3-font);
   font-weight: 400;
   font-size: 2.5em;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+p {
+  font-size:large;
 }
 
 .container {
@@ -41,7 +51,7 @@ body {
 
   width: 1.3em;
   height: 1.3em;
-  border-radius: 50%;
+  border-radius: 100%;
   overflow: hidden;
   margin-top: -6px;
 };
@@ -80,51 +90,92 @@ body {
   color: var(--accent-color);
   margin: 0;
 }
-
-.about {
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  margin: 5% 17.5% 0;
-}
-.about p {
-  font-family: var(--main-font);
+.home img {
+  width: 8em;
+  height: 8em;
+  border-radius: 100%;
 }
 
 .skills {
-  text-align: center;
+  text-align: left;
   justify-content: center;
   align-items: center;
-  margin: 5% 17.5% 0;
+  margin: 0 15% 0;
 }
 .skills p {
   font-family: var(--main-font);
+}
+.skills h2 {
+  color: var(--accent-color);
+  margin: 0;
+  text-align: center;
 }
 
 .projects {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: 5% 17.5% 0;
+  margin: 0 15% 0;
 }
 .projects p {
   font-family: var(--main-font);
 }
+.projects h5 {
+  color: var(--accent-color);
+  margin: 0;
+}
+.projects h2 {
+  color: var(--accent-color);
+}
+
+.date {
+  font-size: small;
+}
 
 .footer {
   position: relative;
-  color: black;
+  color: var(--text-main-black);
   background-color: white;
-  height: 20vh;
+  height: 25vh;
   text-align: center;
   font-family: var(--main-font);
+  column-count: 2;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15% 0;
+}
+.footer img {
+  width: 4em;
+  height: 4em;
+  border-radius: 100%;
+  margin-right: 3em;
 }
 
-.flex { /*Flexbox for containers*/
+.button {
+  color: var(--text-main-black);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  cursor: pointer;
+  width: 8em;
+  border-radius: 1em;
+  text-align: center;
+}
+
+.button:hover {
+  box-shadow: 0 0 10px gray;
+}
+
+.footer-bg {
+  background-color: white;
+}
+
+.flex { 
   display: flex;
-  /* justify-content: center;
-  align-items: center;
-  text-align: center; */
 }
 
 .waves {
@@ -183,5 +234,136 @@ body {
   }
   h1 {
     font-size:24px;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: var(--bg-color-white);
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.tm-container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.tm-container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid var(--accent-color);
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.tm-content {
+  text-align: left;
+  padding: 20px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+  color: var(--text-main-black);
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+/* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+/* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+/* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+/* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
   }
 }
