--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -6,12 +6,12 @@
     <title>Yara Naafs</title>
     <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
     <link rel="stylesheet" href="/css/style.css">
-    <meta property="og:title" content="Mauro's Personal Website" />
+    <meta property="og:title" content="Yara's Personal Website" />
     <meta property="og:description" content="<%= desc %>" />
     <meta property="og:image" content="<%= iconLoc %>" />
     <meta property="og:url" content="<%= url %>" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Mauro's Personal Website" />
+    <meta property="og:site_name" content="Yara's Personal Website" />
 </head>
 <body>
     <div class="container">
